# arkouda

./: .arkoudarc.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/adr/: adopt-okf.md  basic-adr-cli.md  defer-to-unix-tools.md  index.md  ls-style-list-and-decision.md  telemetry-for-agent-command-invocations.md
docs/okf/: README.md
skills/arkouda/: SKILL.md
skills/prepare-release/: SKILL.md
skills/use-arkouda/: SKILL.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/adr/: discovery.rs  frontmatter.rs  index.rs  manifest.rs  mod.rs  status.rs  validator.rs
src/commands/: check.rs  completions.rs  decision.rs  index.rs  list.rs  mod.rs  new.rs  search.rs  show.rs
