[package]
name = "arkouda"
version = "0.3.0"
edition = "2024"
description = "AI-native CLI for Architecture Decision Records — built for AI coding agents"
license = "MIT OR Apache-2.0"
keywords = ["adr", "ai-agents", "llm", "architecture", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/manuelmauro/arkouda"
homepage = "https://github.com/manuelmauro/arkouda"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
colored = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
